--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".MealActivity"
+            android:name=".showMeal.view.MealActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
