implementing missing network call and Activity to show result meals

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.FoodPlanner"
         tools:targetApi="31">
         <activity
+            android:name=".showMeals.view.ShowMealsActivity"
+            android:exported="false" />
+        <activity
             android:name=".showMeal.view.MealActivity"
             android:exported="false" />
         <activity
